refactor: 重构Node结构与解析逻辑