@@ -1,9 +1,11 @@
-package engine.command.util.node;
+package nullengine.command.util.node;
 
-import engine.command.CommandSender;
-import engine.command.argument.Argument;
-import engine.command.suggestion.Suggester;
+import nullengine.command.CommandSender;
+import nullengine.command.argument.Argument;
+import nullengine.command.suggestion.Suggester;
+import nullengine.command.util.StringArgs;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -39,8 +41,13 @@ public class EmptyArgumentNode extends ArgumentNode {
     }
 
     @Override
+    public boolean parse(CommandSender sender, StringArgs args) {
+        return true;
+    }
+
+    @Override
     public List<Object> collect() {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
